--- a/benchmark.yml
+++ b/benchmark.yml
@@ -1,12 +1,11 @@
----
 - name: Telegram benchmark for 15 minutes
   hosts: localhost
   vars:
     telegram_token: "7709438233:AAHhbzrkAUjxEJwCptMvuL3RyZSdZ8Vqw2Q"
     chat_id: "2018308195"
     duration_minutes: 15
-    interval_seconds: 60     # executa a cada 60 segundos
-    start_time: "{{ lookup('pipe', 'date +%s') }}"
+    interval_seconds: 60  # tempo entre cada execução (em segundos)
+    iterations: "{{ (duration_minutes * 60 / interval_seconds) | int }}"
   tasks:
 
     - name: Notify start
@@ -16,36 +15,32 @@
         body_format: json
         body:
           chat_id: "{{ chat_id }}"
-          text: "🚀 Benchmark iniciado! Vai rodar por {{ duration_minutes }} minutos."
+          text: "🚀 Benchmark iniciado! Vai rodar por {{ duration_minutes }} minutos com {{ iterations }} iterações."
 
     - name: Run benchmark loop
-      vars:
-        end_time: "{{ lookup('pipe', 'date +%s') | int + (duration_minutes * 60) }}"
+      loop: "{{ range(0, iterations)|list }}"
+      loop_control:
+        index_var: i
       block:
-        - name: Execute until 15 minutes pass
-          while: "{{ lookup('pipe', 'date +%s') | int < end_time }}"
-          block:
-            - name: Run test command
-              command: ping -c 1 google.com
-              register: test_result
-              ignore_errors: yes
+        - name: Run test command
+          command: ping -c 1 google.com
+          register: test_result
+          ignore_errors: yes
 
-            - name: Save result to file
-              lineinfile:
-                path: /tmp/telegram_benchmark.log
-                line: "{{ lookup('pipe', 'date +%T') }} - {{ 'OK' if test_result.rc == 0 else 'FAIL' }}"
+        - name: Save result to file
+          lineinfile:
+            path: /tmp/telegram_benchmark.log
+            line: "{{ lookup('pipe', 'date +%T') }} - Iteração {{ i + 1 }} - {{ 'OK' if test_result.rc == 0 else 'FAIL' }}"
 
-            - name: Wait interval
-              pause:
-                seconds: "{{ interval_seconds }}"
-          loop_control:
-            label: "Benchmark iteration"
+        - name: Wait between iterations
+          pause:
+            seconds: "{{ interval_seconds }}"
 
-    - name: Calculate results
+    - name: Calculate successful tests
       command: bash -c "grep -c OK /tmp/telegram_benchmark.log || true"
       register: ok_count
 
-    - name: Calculate total runs
+    - name: Calculate total tests
       command: bash -c "wc -l /tmp/telegram_benchmark.log | awk '{print $1}'"
       register: total_count
 
