--- a/benchmark.yml
+++ b/benchmark.yml
@@ -3,8 +3,8 @@
   hosts: localhost
   gather_facts: no
   vars:
-    telegram_token: "SEU_TOKEN_AQUI"
-    chat_id: "SEU_CHAT_ID_AQUI"
+    telegram_token: "7709438233:AAHhbzrkAUjxEJwCptMvuL3RyZSdZ8Vqw2Q"
+    chat_id: "2018308195"
     duration_minutes: 15
     interval_seconds: 60
     iterations: "{{ (duration_minutes * 60 / interval_seconds) | int }}"
