--- a/benchmark.yml
+++ b/benchmark.yml
@@ -1,7 +1,9 @@
 ---
 - name: Telegram benchmark for 15 minutes
   hosts: localhost
+  connection: local
   gather_facts: no
+
   vars:
     telegram_token: "7709438233:AAHhbzrkAUjxEJwCptMvuL3RyZSdZ8Vqw2Q"
     chat_id: "2018308195"
@@ -18,15 +20,14 @@
         body:
           chat_id: "{{ chat_id }}"
           text: "🚀 Benchmark iniciado! Vai rodar por {{ duration_minutes }} minutos com {{ iterations }} iterações."
-      delegate_to: localhost
 
     - name: Run benchmark iteration
-      include_tasks: benchmark_iteration.yml
+      include_tasks: iteration.yml
       loop: "{{ range(1, iterations + 1) | list }}"
       loop_control:
         loop_var: idx
 
-    - name: Send final summary
+    - name: Count successful tests
       command: bash -c "grep -c OK /tmp/telegram_benchmark.log || true"
       register: ok_count
 
@@ -34,4 +35,16 @@
       command: bash -c "wc -l /tmp/telegram_benchmark.log | awk '{print $1}'"
       register: total_count
 
-    - name: Notify com
+    - name: Notify completion
+      uri:
+        url: "https://api.telegram.org/bot{{ telegram_token }}/sendMessage"
+        method: POST
+        body_format: json
+        body:
+          chat_id: "{{ chat_id }}"
+          text: |
+            ✅ Benchmark finalizado!
+            🕒 Duração: {{ duration_minutes }} minutos
+            🔁 Total de execuções: {{ total_count.stdout }}
+            🟢 Sucessos: {{ ok_count.stdout }}
+            🔴 Falhas: {{ total_count.stdout | int - ok_count.stdout | int }}
