--- a/benchmark.yml
+++ b/benchmark.yml
@@ -22,7 +22,7 @@
           text: "🚀 Benchmark iniciado! Vai rodar por {{ duration_minutes }} minutos com {{ iterations }} iterações."
 
     - name: Run benchmark iteration
-      include_tasks: iteration.yml
+      include_tasks: "{{ playbook_dir }}/iterator.yml"
       loop: "{{ range(1, (iterations | int) + 1) | list }}"
       loop_control:
         loop_var: idx
